Added 8 Trending apps in home page

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,8 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+
+.active {
+  text-decoration: underline;
+  background: linear-gradient(to right, #ff7e5f, #feb47b);
+}
