--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,5 @@ body {
 
 .active {
   text-decoration: underline;
-  background: linear-gradient(to right, #ff7e5f, #feb47b);
+  color: #632ee3;
 }
